RESOLVED FIXED52967
[chromium]: Fix WebScrollbarImpl not getting scroll events after recent scrollbar refactoring
https://bugs.webkit.org/show_bug.cgi?id=52967
Summary [chromium]: Fix WebScrollbarImpl not getting scroll events after recent scrol...
John Abd-El-Malek
Reported 2011-01-22 12:50:10 PST
[chromium]: Fix WebScrollbarImpl not getting scroll events after recent scrollbar refactoring
Attachments
Patch (2.01 KB, patch)
2011-01-22 12:53 PST, John Abd-El-Malek
abarth: review+
John Abd-El-Malek
Comment 1 2011-01-22 12:53:44 PST
John Abd-El-Malek
Comment 2 2011-01-22 13:56:34 PST
Note You need to log in before you can comment on or make changes to this bug.