2011-01-22  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Adam Barth.

        [chromium]: Fix WebScrollbarImpl not getting scroll events after recent scrollbar refactoring
        https://bugs.webkit.org/show_bug.cgi?id=52967

        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::horizontalScrollbar):
        (WebKit::WebScrollbarImpl::verticalScrollbar):
        * src/WebScrollbarImpl.h:


Canonical link: https://commits.webkit.org/66689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76455 268f45cc-cd09-0410-ab3c-d52691b4dbfc